--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -15,6 +15,6 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Run ESLint
         run: npm run lint
