--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "@types/node": "^20.12.7",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
